# xcodeproj_indexing_error_repro

./: .bazelrc  README.md
BazelSample/: BUILD.bazel  swiftgen.yml  xcode-index-preferences.json
BazelSample/BazelSample.xcodeproj/: project.pbxproj
BazelSample/BazelSample.xcodeproj/rules_xcodeproj/: generated.xcfilelist
BazelSample/BazelSample.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh
BazelSample/BazelSample.xcodeproj/xcshareddata/xcschemes/: BazelSampleApp.xcscheme  CocktailDB.xcscheme  CocktailDBInterface.xcscheme  CommonUI.xcscheme  DrinkData.xcscheme  DrinkDetails.xcscheme  DrinkDetailsInterface.xcscheme  DrinkDiscovery.xcscheme  DrinkDiscoveryInterface.xcscheme  DrinkDomain.xcscheme  NetworkInterface.xcscheme  Networking.xcscheme
BazelSample/CommonUI/Sources/: EmptyState.swift  GreatButton.swift  LoadingView.swift
BazelSample/DrinkDetails/Sources/: DrinkDetailsView.swift
BazelSample/DrinkDiscovery/Sources/: DrinkDiscoveryTableViewCell.swift  DrinkDiscoveryView.swift
